--- a/space.css
+++ b/space.css
@@ -7,7 +7,8 @@ body {
     position: relative;
 }
 
-#pauseMenu {
+#pauseMenu,
+#levelStory {
     display: none;
     position: absolute;
     top: 50%;
@@ -18,9 +19,14 @@ body {
 }
 
 
-#pauseMenu button {
-    margin: 10px;
-    padding: 10px 20px;
+button {
+    font-family: 'Courier New', Courier, monospace;
+    color: #00FF00;
+    background: none;
+    border: none;
+    margin: 20px;
+    font-size: 25px;
+    cursor: pointer;
 }
 
 #board {
@@ -29,11 +35,9 @@ body {
     border: 2px solid #00FF00;
     overflow: hidden;
     margin: 0 auto;
-    width: 100%;
-    height: 100%;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.4), 0 0 30px rgba(0, 255, 0, 0.2);
-
-
+    width: 900px;
+    height: 900px;
 }
 
 #board::before {
@@ -49,7 +53,7 @@ body {
             transparent 1px,
             transparent 3px);
     pointer-events: none;
-    
+
 }
 
 .ship {
@@ -86,7 +90,8 @@ body {
 
 .wall {
     position: absolute;
-    background-color: #00FF00;;
+    background-color: #00FF00;
+    ;
     border-radius: 5px;
     opacity: 1;
     transition: opacity 0.3s;
